gobmkida/c0/purge_persistent_owl_cache
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/purge_persistent_owl_cache/src/engine/persistent.c:1115:6: error: use of undeclared identifier 'purge_persistent_owl_cache_last_purge_position_number'
if ( purge_persistent_owl_cache_last_purge_position_number != position_number ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/purge_persistent_owl_cache/src/engine/persistent.c:1117:1: error: use of undeclared identifier 'purge_persistent_owl_cache_last_purge_position_number'
purge_persistent_owl_cache_last_purge_position_number = position_number; 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/purge_persistent_owl_cache/src/engine/persistent.c:1123:97: error: use of undeclared identifier 'owl_cache'
memcpy( &persistent_owl_cache[k], &persistent_owl_cache[persistent_owl_cache_size - 1], sizeof( owl_cache)); 
                                                                                                ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/purge_persistent_owl_cache/src/obj/1/persistent.o] Error 1
